--- a/config/crd/bases/infinispan.org_caches.yaml
+++ b/config/crd/bases/infinispan.org_caches.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: caches.infinispan.org
 spec:
@@ -59,6 +58,7 @@ spec:
                     required:
                     - key
                     type: object
+                    x-kubernetes-map-type: atomic
                   secretName:
                     description: The secret that contains user credentials.
                     type: string
@@ -81,6 +81,7 @@ spec:
                     required:
                     - key
                     type: object
+                    x-kubernetes-map-type: atomic
                 type: object
               clusterName:
                 description: Infinispan cluster name
@@ -143,9 +144,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
