--- a/config/crd/bases/integreatly.org_grafanadashboards.yaml
+++ b/config/crd/bases/integreatly.org_grafanadashboards.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: grafanadashboards.integreatly.org
 spec:
@@ -53,6 +52,7 @@ spec:
                 required:
                 - key
                 type: object
+                x-kubernetes-map-type: atomic
               customFolderName:
                 type: string
               datasources:
@@ -96,9 +96,3 @@ spec:
         type: object
     served: true
     storage: true
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
