--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -81,6 +81,10 @@ spec:
                   {
                     "upstream-version": "14.0.20",
                     "image": "quay.io/infinispan/server:14.0.20.Final"
+                  },
+                  {
+                    "upstream-version": "14.0.21",
+                    "image": "quay.io/infinispan/server:14.0.21.Final"
                   }
                 ]
             - name: POD_NAME
