--- a/test-integration/test-server/pom.xml
+++ b/test-integration/test-server/pom.xml
@@ -11,7 +11,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <version.infinispan.hotrod>14.0.21.Final</version.infinispan.hotrod>
+        <version.infinispan.hotrod>15.0.0.Dev06</version.infinispan.hotrod>
         <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
         <version.maven.war>3.2.2</version.maven.war>
 
