Change the default timestamp format in the operator logging
Fixes #1962

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -31,6 +31,8 @@ spec:
           args:
             - operator
             - --leader-elect
+            - --zap-time-encoding
+            - rfc3339
           imagePullPolicy: Always
           livenessProbe:
             httpGet:
