--- a/.github/workflows/sync_docs.yaml
+++ b/.github/workflows/sync_docs.yaml
@@ -3,8 +3,7 @@ name: Synchronize documentation to the website
 on:
   push:
     branches:
-      - 'main'
-      - '2.2.x'
+      - '*'
 
 jobs:
   upload:
@@ -23,15 +22,8 @@ jobs:
         ref: master
         path: infinispan.github.io
 
-    - if: github.ref == 'refs/heads/main'
-      name: Copy docs to main
-      run: |
-        cp -r documentation/asciidoc/titles/operator.html infinispan.github.io/docs/infinispan-operator/main
-
-    - if: github.ref == 'refs/heads/2.2.x'
-      name: Copy docs to main
-      run: |
-        cp -r documentation/asciidoc/titles/operator.html infinispan.github.io/docs/infinispan-operator/2.2.x
+    - name: Copy Docs
+      run: cp -r documentation/asciidoc/titles/operator.html infinispan.github.io/docs/infinispan-operator/${{ github.ref_name }}
 
     - name: Commit files
       run: |
