--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -87,6 +87,10 @@ spec:
                   {
                     "upstream-version": "14.0.21",
                     "image": "quay.io/infinispan/server:14.0.21.Final"
+                  },
+                  {
+                    "upstream-version": "14.0.24",
+                    "image": "quay.io/infinispan/server:14.0.24.Final"
                   }
                 ]
             - name: POD_NAME
