--- a/.github/workflows/upgrade_tests.yaml
+++ b/.github/workflows/upgrade_tests.yaml
@@ -29,6 +29,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Remove unnecessary files
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf "/usr/local/share/boost"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
