--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -98,7 +98,7 @@ spec:
                   },
                   {
                     "upstream-version": "15.0.0",
-                    "image": "quay.io/infinispan/server:15.0.0.Dev09"
+                    "image": "quay.io/infinispan/server:15.0.0.Final"
                   }
                 ]
             - name: POD_NAME
