--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -91,6 +91,10 @@ spec:
                   {
                     "upstream-version": "14.0.24",
                     "image": "quay.io/infinispan/server:14.0.24.Final"
+                  },
+                  {
+                    "upstream-version": "14.0.27",
+                    "image": "quay.io/infinispan/server:14.0.27.Final"
                   }
                 ]
             - name: POD_NAME
