--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -20,3 +20,12 @@ jobs:
           pull-request: ${{ github.event.pull_request.url }}
           auth: ${{ secrets.GITHUB_TOKEN }}
           no-squash: true
+
+      - if: contains(github.event.pull_request.labels.*.name, 'stable')
+        name: Stable Backport
+        uses: kiegroup/git-backporting@v4.7.1
+        with:
+          target-branch: stable
+          pull-request: ${{ github.event.pull_request.url }}
+          auth: ${{ secrets.GITHUB_TOKEN }}
+          no-squash: true
