--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -99,6 +99,10 @@ spec:
                   {
                     "upstream-version": "15.0.0",
                     "image": "quay.io/infinispan/server:15.0.0.Final"
+                  },
+                  {
+                    "upstream-version": "15.0.1",
+                    "image": "quay.io/infinispan/server:15.0.1.Final"
                   }
                 ]
             - name: POD_NAME
