[test-integration] Update test server to webserver 6

--- a/test-integration/global-test.properties
+++ b/test-integration/global-test.properties
@@ -1,1 +1,1 @@
-xtf.testserver.image=registry.redhat.io/jboss-webserver-5/webserver55-openjdk11-tomcat9-openshift-rhel8:1.0
+xtf.testserver.image=registry.redhat.io/jboss-webserver-6/jws60-openjdk17-openshift-rhel8:latest
