--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -54,7 +54,8 @@ spec:
                 [
                   {
                     "upstream-version": "13.0.10",
-                    "image": "quay.io/infinispan/server:13.0.10.Final"
+                    "image": "quay.io/infinispan/server:13.0.10.Final",
+                    "deprecated": true
                   },
                   {
                     "upstream-version": "14.0.1",
