--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -104,6 +104,10 @@ spec:
                   {
                     "upstream-version": "15.0.3",
                     "image": "quay.io/infinispan/server:15.0.3.Final"
+                  },
+                  {
+                    "upstream-version": "15.0.4",
+                    "image": "quay.io/infinispan/server:15.0.4.Final"
                   }
                 ]
             - name: POD_NAME
