--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -103,6 +103,10 @@ spec:
                   {
                     "upstream-version": "15.0.4",
                     "image": "quay.io/infinispan/server:15.0.4.Final"
+                  },
+                  {
+                    "upstream-version": "15.0.5",
+                    "image": "quay.io/infinispan/server:15.0.5.Final"
                   }
                 ]
             - name: POD_NAME
