--- a/config/crd/bases/integreatly.org_grafanadatasources.yaml
+++ b/config/crd/bases/integreatly.org_grafanadatasources.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: grafanadatasources.integreatly.org
 spec:
   group: integreatly.org
@@ -21,14 +20,19 @@ spec:
         description: GrafanaDataSource is the Schema for the grafanadatasources API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -36,10 +40,10 @@ spec:
             description: GrafanaDataSourceSpec defines the desired state of GrafanaDataSource
             properties:
               datasources:
-                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "operator-sdk generate k8s" to regenerate code after
-                  modifying this file Add custom validation using kubebuilder tags:
-                  https://book.kubebuilder.io/beyond_basics/generating_crd.html'
+                description: |-
+                  INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                  Important: Run "operator-sdk generate k8s" to regenerate code after modifying this file
+                  Add custom validation using kubebuilder tags: https://book.kubebuilder.io/beyond_basics/generating_crd.html
                 items:
                   properties:
                     access:
@@ -57,12 +61,15 @@ spec:
                     isDefault:
                       type: boolean
                     jsonData:
-                      description: The most common json options See https://grafana.com/docs/administration/provisioning/#datasources
+                      description: |-
+                        The most common json options
+                        See https://grafana.com/docs/administration/provisioning/#datasources
                       properties:
                         addCorsHeader:
-                          description: Useful fields for clickhouse datasource See
-                            https://github.com/Vertamedia/clickhouse-grafana/tree/master/dist/README.md#configure-the-datasource-with-provisioning
-                            See https://github.com/Vertamedia/clickhouse-grafana/tree/master/src/datasource.ts#L44
+                          description: |2-
+                             Useful fields for clickhouse datasource
+                             See https://github.com/Vertamedia/clickhouse-grafana/tree/master/dist/README.md#configure-the-datasource-with-provisioning
+                             See https://github.com/Vertamedia/clickhouse-grafana/tree/master/src/datasource.ts#L44
                           type: boolean
                         appInsightsAppId:
                           description: Fields for Azure data sources
@@ -116,7 +123,9 @@ spec:
                         graphiteVersion:
                           type: string
                         httpHeaderName1:
-                          description: Custom HTTP headers for datasources See https://grafana.com/docs/grafana/latest/administration/provisioning/#datasources
+                          description: |-
+                            Custom HTTP headers for datasources
+                            See https://grafana.com/docs/grafana/latest/administration/provisioning/#datasources
                           type: string
                         httpHeaderName2:
                           type: string
@@ -209,7 +218,9 @@ spec:
                     password:
                       type: string
                     secureJsonData:
-                      description: The most common secure json options See https://grafana.com/docs/administration/provisioning/#datasources
+                      description: |-
+                        The most common secure json options
+                        See https://grafana.com/docs/administration/provisioning/#datasources
                       properties:
                         accessKey:
                           type: string
@@ -221,7 +232,9 @@ spec:
                           description: Fields for Azure data sources
                           type: string
                         httpHeaderValue1:
-                          description: Custom HTTP headers for datasources See https://grafana.com/docs/grafana/latest/administration/provisioning/#datasources
+                          description: |-
+                            Custom HTTP headers for datasources
+                            See https://grafana.com/docs/grafana/latest/administration/provisioning/#datasources
                           type: string
                         httpHeaderValue2:
                           type: string
