--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -91,6 +91,10 @@ spec:
                   {
                     "upstream-version": "14.0.27",
                     "image": "quay.io/infinispan/server:14.0.27.Final"
+                  }, 
+                  {
+                    "upstream-version": "14.0.32",
+                    "image": "quay.io/infinispan/server:14.0.32.Final"
                   },
                   {
                     "upstream-version": "15.0.0",
