--- a/.github/workflows/test_xsite.yml
+++ b/.github/workflows/test_xsite.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run XSite Tests
         run: make xsite-test
+        env:
+          RUN_LOCAL_OPERATOR: false
 
       - name: Inspect Cluster
         if: failure()
