Expose scale subresource to enable HPA's to modify the replicas of Infinispan CR (#2133)

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -2461,6 +2461,9 @@ spec:
                     description: The secret that contains user credentials.
                     type: string
                 type: object
+              selector:
+                description: The Operator Selector
+                type: string
               statefulSetName:
                 type: string
             type: object
@@ -2468,4 +2471,8 @@ spec:
     served: true
     storage: true
     subresources:
+      scale:
+        labelSelectorPath: .status.selector
+        specReplicasPath: .spec.replicas
+        statusReplicasPath: .status.replicas
       status: {}
