Commit generated files missing from 32d71f370de53c77727d6251e6a5c4cf5e513a7d

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -2462,7 +2462,7 @@ spec:
                     type: string
                 type: object
               selector:
-                description: The Operator Selector
+                description: The Selector used to identify Infinispan cluster pods
                 type: string
               statefulSetName:
                 type: string
